# sitemapper

./: Makefile  README.md  Table.docx  crawler-test.com_sitemap.txt  google.com_sitemap.txt  pyproject.toml  stackoverflow.com_sitemap.txt  vk.com_sitemap.txt  yandex.ru_sitemap.txt
sitemapper/: crawler.py  run.py
