[tool.poetry]
name = "sitemapper"
version = "0.1.0"
description = ""
authors = ["yutanov <utanov@gmail.com>"]
packages = [
	{ include = "sitemapper" },
]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"
aiofile = "^3.7.4"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sitemapper = "sitemapper.run:main"
